# word-game

./: Cargo.toml
src/: args.rs  error.rs  lib.rs  main.rs  xmpp.rs
src/database/: in_memory.rs  mod.rs
src/domain/: player.rs
src/game/: game.rs  mod.rs  player.rs
src/repository/: player.rs
src/runner/: console.rs  mod.rs  xmpp.rs
src/time/: duration.rs
