[package]
name = "word-game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
rpassword = "5"
futures = "0.3"
tokio-xmpp = "3"
xmpp-parsers = "0.18"
tokio = { version = "1", features = ["full"]}
structopt = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "3", features = ["derive", "env"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "macros" ] }
